# Whisp

./: .gitignore  FEATURES.md  GUIDE.md  README.md  package.json  pnpm-workspace.yaml
.codeatlas/: project-index.json
.github/workflows/: ci.yml  release.yml
branding_assets/icons/mac/: Assets.car  app.icns
branding_assets/vector_icons/: whisp_logo.icon
chromium/: contributing.md
chromium-extension/: package.json  tailwind.config.js  tsconfig.json  webpack.config.js
chromium-extension/public/: manifest.json  options.html  sidebar.html
chromium-extension/src/background/: index.ts
chromium-extension/src/background/agent/: browser-service.ts  chat-service.ts  file-agent.ts  index.ts  utils.ts
chromium-extension/src/content/: index.ts
chromium-extension/src/db/: db-service.ts  db.ts
chromium-extension/src/llm/: llm.interface.ts  llm.ts
chromium-extension/src/options/: index.tsx
chromium-extension/src/sidebar/: MarkdownRenderer.tsx  index.css  index.tsx  types.ts
chromium-extension/src/sidebar/components/: AgentExecutionCard.tsx  ChatInput.tsx  HumanCard.tsx  MessageItem.tsx  SessionHistory.tsx  TextItem.tsx  ThinkingItem.tsx  ToolCallItem.tsx  WebpageMentionInput.tsx  WorkflowCard.tsx
chromium-extension/src/sidebar/hooks/: useChatCallbacks.ts  useFileUpload.ts  useSessionManagement.ts  useThemeColors.ts
chromium-extension/src/sidebar/providers/: ThemeProvider.tsx
chromium-extension/src/sidebar/utils/: messageConverter.ts  toolNameMapper.ts
chromium/config/: patches.list
chromium/docs/: THEME_COLORS_API.md  WHISP_ASSISTANT_INTEGRATION.md
chromium/gn/: linux.gni  macos.gni  whisp.gni  windows.gni
chromium/packaging/linux/: build_appimage.sh  build_deb.sh  build_rpm.sh
chromium/packaging/macos/: build_app.sh  build_dmg.sh
chromium/packaging/windows/: build_exe.bat  build_exe.ps1  build_msi.bat  build_msi.ps1
chromium/patches/branding/: branding-assets.patch  branding_and_theme.patch  branding_url_changes.patch  startup_page.patch  tab_search_url_replacement.patch  whisp_product_branding.patch
chromium/patches/development/: disable-qr-code-crash.patch
chromium/patches/theme/: theme-color-system.patch  theme-styling.patch
chromium/patches/theme_api/: theme-colors-api.patch
chromium/patches/ui/: settings_ui_changes.patch  theme_and_ui_changes.patch  ui-layout-changes.patch  updated-tab-radius.patch
chromium/patches/whisp_integration/: whisp-assistant-integration.patch
chromium/scripts/: apply_branding_assets.ps1  apply_branding_assets.sh  apply_icon_assets.ps1  apply_icon_assets.sh  apply_patches.ps1  apply_patches.sh  copy_extension_to_resources.ps1  copy_extension_to_resources.sh  setup_whisp.ps1  setup_whisp.sh
scripts/: build.js  build_chromium.js  build_platform.js  package.js  release.js
