# macOS-specific GN args for Whisp release build
#
# Usage:
#   cd ../chromium/src
#   gn args out/release < ../../whisp/chromium/gn/macos.gni
#
# Then build:
#   autoninja -C out/release chrome   # produces Whisp.app bundle
#
# For DMG (post-build):
#   bash ../../whisp/chromium/packaging/macos/build_dmg.sh out/release
#
# For code signing (distribution):
#   bash ../../whisp/chromium/packaging/macos/build_app.sh out/release "Developer ID"

is_debug = false
is_component_build = false
symbol_level = 0
blink_symbol_level = 0
enable_nacl = false
use_goma = false
use_jumbo_build = true
treat_warnings_as_errors = false
is_chrome_branded = false
mac_sdk_min = "13.0"
