# Whisp GN build configuration
# Include this in your GN args via `gn args out/whisp < chromium/gn/whisp.gni`
# or paste the contents into `gn args out/whisp`

# --- Common settings (all platforms) ---
is_debug = false
is_component_build = false
symbol_level = 0
blink_symbol_level = 0
enable_nacl = false
use_goma = false
use_jumbo_build = true
treat_warnings_as_errors = false

# --- Branding ---
is_chrome_branded = false
chrome_product_full_name = "Whisp"
chrome_product_short_name = "Whisp"
chrome_product_version = "1.0.0.0"

# --- Features ---
enable_remoting = false
enable_printing = true
enable_widevine = false
enable_reading_list = false
enable_read_later = false
