# Whisp common GN build configuration (all platforms)
#
# Usage:
#   cd ../chromium/src
#   gn args out/release < ../../whisp/chromium/gn/whisp.gni
#
# Or paste the content below into `gn args out/release`.

# --- Common settings (all platforms) ---
is_debug = false
is_component_build = false
symbol_level = 0
blink_symbol_level = 0
enable_nacl = false
use_goma = false
use_jumbo_build = true
treat_warnings_as_errors = false

# --- Branding ---
is_chrome_branded = false

# --- Features ---
enable_remoting = false
enable_printing = true
enable_widevine = false
enable_reading_list = false
enable_read_later = false
