# Windows-specific GN args for Whisp release build
#
# Usage:
#   cd ..\chromium\src
#   gn args out\release < ..\..\whisp\chromium\gn\windows.gni
#
# Then build:
#   autoninja -C out\release chrome                    # chrome.exe
#   autoninja -C out\release mini_installer             # NSIS EXE installer
#   autoninja -C out\release chrome_msi                 # WiX MSI installer

is_debug = false
is_component_build = false
symbol_level = 0
blink_symbol_level = 0
enable_nacl = false
use_goma = false
use_jumbo_build = true
treat_warnings_as_errors = false
is_chrome_branded = false
enable_hidpi = true
